@@ -1,3 +1,7 @@
+2007-05-24 Sarka Todorova <sarka.todorova@cern.ch>
+        * fix material properties in spacer (wrong zOverAtimesRho)
+	* tagged as MuonTrackingGeometry-00-00-46
+	
 2007-05-23 Sarka Todorova <sarka.todorova@cern.ch>
         * fix orientation of layer representation in barrel(box) stations
 	* tagged as MuonTrackingGeometry-00-00-45
